@@ -1,17 +1,13 @@
 package it.polimi.ingsw.UI.GUI;
 
 import it.polimi.ingsw.UI.UISession;
-import it.polimi.ingsw.controller.actions.ChooseOfferAction;
-import it.polimi.ingsw.controller.actions.DrawCardFromBottomAction;
-import it.polimi.ingsw.controller.actions.DrawCardFromTopAction;
+import it.polimi.ingsw.controller.actions.*;
 import it.polimi.ingsw.controller.states.StateDTO;
 import it.polimi.ingsw.model.*;
 import it.polimi.ingsw.model.board.BoardDTO;
 import it.polimi.ingsw.model.board.OfferDTO;
 import it.polimi.ingsw.model.exceptions.IllegalActionException;
 import it.polimi.ingsw.networking.UIObserver;
-import javafx.animation.Interpolator;
-import javafx.animation.TranslateTransition;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
@@ -19,24 +15,19 @@ import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.*;
 import javafx.scene.control.Label;
-import javafx.scene.control.ScrollPane;
-import javafx.scene.control.Tab;
 import javafx.scene.control.TabPane;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
-import javafx.scene.paint.Paint;
 import javafx.scene.shape.Rectangle;
 import javafx.scene.text.Text;
 import javafx.stage.Stage;
 import javafx.util.Duration;
-import org.w3c.dom.css.Rect;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Stream;
 
 public class FieldController implements UIObserver {
     @FXML AnchorPane anchor;
@@ -305,9 +296,9 @@ public class FieldController implements UIObserver {
         Platform.runLater(() -> {
             // Update toasts
             updateInstructionLabel();
-            if (!game.getErrorFlag().equals("")) {
+            if (!game.getErrorFlag().isEmpty()) {
                 errorToast.setVisible(true);
-                ((Label) errorToast.getChildren().get(0)).setText(game.getErrorFlag());
+                ((Label) errorToast.getChildren().getFirst()).setText(game.getErrorFlag());
             } else {
                 errorToast.setVisible(false);
             }
@@ -350,7 +341,7 @@ public class FieldController implements UIObserver {
 
             VBox errorToastStart = (VBox) startRoot.lookup("#errorToast");
             errorToastStart.setVisible(true);
-            ((Label) errorToastStart.getChildren().get(0)).setText("Sorry, the game as been closed due to a disconnection of a player");
+            ((Label) errorToastStart.getChildren().getFirst()).setText("Sorry, the game as been closed due to a disconnection of a player");
 
             startRoot.lookup("#playAgain").setVisible(true);
             startRoot.lookup("#clientSelect").setVisible(false);
@@ -361,7 +352,7 @@ public class FieldController implements UIObserver {
     }
 
     @Override
-    public void serverCrashed() throws IOException, IllegalActionException, InterruptedException{
+    public void serverCrashed() {
         System.out.println("Sorry, the server crashed\n");
         System.exit(1);
     }
@@ -371,7 +362,7 @@ public class FieldController implements UIObserver {
         GameDTO game = UISession.getGame();
         Group g = (Group) e.getSource();
 
-        // If its my turn
+        // If it's my turn
         if (game.getPlayerTurn().getName().equals(UISession.getClient().getNickname())) {
             if (game.getState() == StateDTO.DRAWCARD) {
                 OfferDTO offer = game.getBoard().getOfferPath().stream()
@@ -472,7 +463,7 @@ public class FieldController implements UIObserver {
                     .findFirst().get();
 
             // Check its free
-            if (!game.getPlayers().stream().anyMatch(p -> p.getOffer() == c.getTile().getOrder())) {
+            if (game.getPlayers().stream().noneMatch(p -> p.getOffer() == c.getTile().getOrder())) {
                 // Choose it
                 try {
                     UISession.getClient().executeAction(new ChooseOfferAction(c.getTile().getOrder()));
@@ -598,7 +589,7 @@ public class FieldController implements UIObserver {
 
                 for (CardDTO c : hand) {
                     // If absent, insert it
-                    if (!handVBox.getChildren().stream().anyMatch(m -> meshRegistry.get(m).getCard().getId() == c.getId())){
+                    if (handVBox.getChildren().stream().noneMatch(m -> meshRegistry.get(m).getCard().getId() == c.getId())){
                         handVBox.getChildren().add(idRegistry.get(c.getId()).getMesh());
                     }
                 }
